Patched score and match length error